--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="m">M</string>
     <string name="add_to_card">Добавитьть в корзину</string>
     <string name="description">Описание</string>
+    <string name="size">Размер</string>
 </resources>
