--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="add_to_card">Добавитьть в корзину</string>
     <string name="description">Описание</string>
     <string name="size">Размер</string>
+    <string name="home">Главная</string>
+    <string name="profile">Профиль</string>
+    <string name="favorite">Избранное</string>
+    <string name="card">Корзина</string>
 </resources>
