add logo search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="profile">Профиль</string>
     <string name="favorite">Избранное</string>
     <string name="card">Корзина</string>
+    <string name="search">Поиск</string>
 </resources>
