--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
     <string name="favorite">Избранное</string>
     <string name="card">Корзина</string>
     <string name="search">Поиск</string>
+    <string name="costumes">Костюмы</string>
+    <string name="coat">Пальто</string>
+    <string name="shoes">Обувь</string>
+    <string name="jacket">Жакеты и пиджаки</string>
+    <string name="trikotaj">Трикотаж</string>
+    <string name="swim_suit">Купальники</string>
+    <string name="home_wear">Домашняя одежда</string>
+    <string name="marina">Marina Rinaldi</string>
 </resources>
