add preview new coloction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="swim_suit">Купальники</string>
     <string name="home_wear">Домашняя одежда</string>
     <string name="marina">Marina Rinaldi</string>
+    <string name="new_clothes">Новые поступления</string>
 </resources>
