--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="home_wear">Домашняя одежда</string>
     <string name="marina">Marina Rinaldi</string>
     <string name="new_clothes">Новые поступления</string>
+    <string name="sales">Скидки</string>
 </resources>
