refresh main page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="swim_suit">Купальники</string>
     <string name="home_wear">Домашняя одежда</string>
     <string name="marina">Marina Rinaldi</string>
-    <string name="new_clothes">Новые поступления</string>
-    <string name="sales">Скидки</string>
+    <string name="new_clothes">НОВЫЕ ПОСТУПЛЕНИЯ</string>
+    <string name="sales">СКИДКИ</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toOrder">Перейти к оформлению</string>
