--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,9 @@
     <string name="marina">Marina Rinaldi</string>
     <string name="new_clothes">НОВЫЕ ПОСТУПЛЕНИЯ</string>
     <string name="sales">СКИДКИ</string>
+    <string name="cart_empty">Корзина пока пуста. Выберите что-нибудь в каталоге</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toOrder">Перейти к оформлению</string>
+    <string name="all">Все</string>
 </resources>
