--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="mbLike">Вам может понравиться</string>
     <string name="sale">СКИДКА</string>
     <string name="write_primerky"><u>Запишитесь на примерку</u></string>
+    <string name="order_text">Отправляем заказы курьерской службой по всей России. Согласуем с вами сроки и стоимость, чтобы вы могли выбрать оптимальный способ доставки.</string>
+    <string name="look_map"><u>Посмотреть на карте</u></string>
+    <string name="order_text2">В шоуруме вы можете расплатиться картой или наличными</string>
 </resources>
